<resources>
    <string name="app_name">Weather Checker</string>
    <string name="city_name">City name</string>
    <string name="temp">+15</string>
    <string name="description">description</string>
    <string name="wind">wind</string>
    <string name="humidity">humidity</string>
    <string name="today_weather_now">Weather now</string>
    <string name="graphs_weather">Weather graphs</string>
    <string name="get_data_from_api">Getting data from servers every 1 minute</string>
    <string name="last_date_update">Date the last update:</string>
    <string name="stop_service">Stop service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_settings">Apply settings</string>
    <string name="config_hint">Write city</string>
    <string name="notification_off">Add current weather notification</string>
</resources>
