<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_to_today_weather_fragment"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/today_weather_now"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_to_graphs_weather"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/graphs_weather"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_stop_service"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/stop_service"
        app:layout_constraintEnd_toStartOf="@+id/btn_to_graphs_weather"
        app:layout_constraintStart_toEndOf="@+id/btn_to_today_weather_fragment"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>